# legba

./: .gitignore  .gitleaksignore  .loa-version.json  .loa.config.yaml  .trufflehog.yaml  AGENTS.md  BUDGET.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT_CHECKLIST_CK.md  HEARTBEAT.md  IDENTITY.md  INSTALLATION.md  MEMORY.md  MIGRATION_GUIDE_CK.md  PROCESS.md  README.md  RELEASE_NOTES_CK_INTEGRATION.md  TOOLS.md  WORKLEDGER.md
simstim/: CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
simstim/.github/workflows/: ci.yml  release.yml
simstim/src/simstim/: __init__.py  __main__.py  cli.py  config.py  deck.py  validation.py
simstim/src/simstim/audit/: __init__.py  logger.py
simstim/src/simstim/bridge/: __init__.py  loa_monitor.py  offline_queue.py  permission_queue.py  rate_limiter.py  stdout_parser.py
simstim/src/simstim/policies/: __init__.py  engine.py  models.py
simstim/src/simstim/quality/: __init__.py  feedback_parser.py  links.py  notes_parser.py
simstim/src/simstim/security/: __init__.py  crypto.py
simstim/src/simstim/telegram/: __init__.py  bot.py  formatters.py  keyboards.py
simstim/src/simstim/utils/: __init__.py
simstim/tests/: __init__.py  conftest.py  test_hardening.py  test_parser.py  test_policies.py  test_quality.py  test_telegram.py
simstim/tests/integration/: __init__.py  test_permission_flow.py
simstim/tests/security/: __init__.py  test_audit_integrity.py  test_authorization.py  test_callbacks.py  test_command_injection.py  test_env_var_expansion.py  test_rate_limiter.py  test_redaction.py  test_redos.py  test_token_exposure.py
(+289 files in other folders)
